force-app/main/default/objects/Profesional_por_Institucion__c/Profesional_por_Institucion__c.object-meta.xml
<CustomObject>
    <label>Profesional por Institución</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Nombre de Profesional por Institución</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profesionales por Instituciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>