force-app/main/default/objects/Profesional_por_Institucion__c/fields/Codigo_postal_de_institucion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal_de_institucion__c</fullName>
    <formula>Institucion__r.Codigo_postal_service__r.Numero_de_CP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código postal de institución</label>
    <type>Text</type>
</CustomField>