force-app/main/default/objects/Profesional_por_Institucion__c/fields/IdExternoNombre__c.field-meta.xml
<CustomField>
    <fullName>IdExternoNombre__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>IdExternoNombre</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>