force-app/main/default/objects/Profesional_por_Institucion__c/fields/Visitador_m_dico_de_Profesional__c.field-meta.xml
<CustomField>
    <fullName>Visitador_m_dico_de_Profesional__c</fullName>
    <formula>Profesional__r.Owner.FirstName + &apos; &apos; + Profesional__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitador médico de Profesional</label>
    <type>Text</type>
</CustomField>