force-app/main/default/objects/Profesional_por_Institucion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profesional__c</columns>
    <columns>Institucion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>